# ard-classifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: additional_plots.py  basic_usage.py  benchmark_comparison.py  generate_readme_plots.py  real_dataset_evaluation.py
src/ard_classifier/: __init__.py  classifier.py
tests/: __init__.py  test_classifier.py
